--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: fars
 Type: Package
-Title: What the Package Does (Title Case)
+Depends: R (>= 3.0.0)
+Title: fars data R package
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: This package read and summarize FARS data and summarize them.
+    Summary reports are by year and incident plots by state and year.
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.0
+Imports: dplyr, graphics, magrittr, maps, readr, tidyr
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
