--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Package: fars
-Type: Package
-Depends: R (>= 3.0.0)
-Title: fars data R package
-Version: 0.1.0
-Description: This package read and summarize FARS data and summarize them.
-    Summary reports are by year and incident plots by state and year.
-License: GPL (>= 2)
+Title: Fatality Analysis Reporting System Functions
+Version: 0.0.0.9000
+Authors@R: JF
+Description: Functions to read data from the Fatality Analysis Reporting System,
+             provide a summary, and map accidents by state.    
+Depends: R (>= 3.3.3)
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
-Imports: dplyr, graphics, magrittr, maps, readr, tidyr
-Suggests: 
-    knitr,
+RoxygenNote: 6.0.1
+Imports: dplyr, maps, tidyr, readr
+Suggests: knitr,
     rmarkdown,
     testthat
 VignetteBuilder: knitr
