--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: fars
 Title: Fatality Analysis Reporting System Functions
 Version: 0.0.0.9000
-Authors@R: person("JF", "Ee", role = c("aut", "cre"))
+Authors@R: person("JF", "Ee", email = "eejingfeng@hotmail.com", role = c("aut", "cre"))
 Description: Functions to read data from the Fatality Analysis Reporting System,
              provide a summary, and map accidents by state.    
 Depends: R (>= 3.3.3)
